--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -34,7 +34,7 @@ jobs:
     needs: build
     environment:
       name: production
-      url: http://mushy-copy.surge.sh.surge.sh
+      url: http://mushy-copy.surge.sh
     steps:
       - name: Download the Build Artifact
         uses: actions/download-artifact@v3.0.0
@@ -42,7 +42,7 @@ jobs:
           name: build
 
       - name: deploy to surge
-        run: npx surge -project '.' -domain melted-chickens.surge.sh
+        run: npx surge -project '.' -domain mushy-copy.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
