--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -42,7 +42,7 @@ jobs:
           name: build
 
       - name: deploy to surge
-        run: npx surge -project '.' -domain mushy-copy.surge.sh
+        run: npx surge --project '.' --domain mushy-copy.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
